--- a/src/app/style/components/base.scss
+++ b/src/app/style/components/base.scss
@@ -26,6 +26,12 @@ h1{
 
 }
 
+h3{
+    position: absolute;
+    margin-left: 17%;
+    margin-top: 3%;
+}
+
 h2{
 	position: absolute;
 	margin-left: 21%;
@@ -46,6 +52,6 @@ h2{
 p{
 	position: absolute;
 	margin-left: 17%;
-	margin-top: 4%;
+	margin-top: 7%;
 
 }
