--- a/src/app/style/components/base.scss
+++ b/src/app/style/components/base.scss
@@ -2,6 +2,7 @@
 
 html {
     font-size: 16px;
+    min-width: 500px;
 }
 
 body {
@@ -24,39 +25,38 @@ body {
 /*----------------CONTENT------------------*/
 
 #content {
-    #container {
-        position: absolute;
-        width: 90%;
-        height: 80%;
-        h1,
-        h2 {
-            font-family: 'Tangerine', cursive;
-        }
+    color: $grey;
+    margin: 2rem 2rem;
+    text-align: center;
+    .title {
+        font-family: $tangerine;
+        font-size: 5rem;
+        text-align: center;
+    }
+    .plat {
+        background: $white;
+        transition-duration: 0.1s;
+        @include border-radius(1rem);
+        border: 0.1rem solid #BDBDBD;
+        display: inline-block;
+        margin: 0.5rem;
+        padding: 0.5rem;
+        width: 30%;
         img {
-            position: absolute;
-            width: 15%;
-            height: 22%;
-            margin-top: 3%;
-            margin-left: 1%;
+            @include border-radius(0.5rem);
+            transition-duration: 0.2s;
+            width: 60%;
+            margin: 1rem 0.5rem;
         }
-        h1 {
-            margin-top: 5%;
-            font-size: 55px;
+        h3 {
+            font-size: 1.5rem;
+            color: $brown;
         }
-        h2 {
-            position: absolute;
-            margin-left: 21%;
-            margin-top: -1rem;
-            font-size: 35px;
-        }
-        .description {
-            width: 80%;
-            height: 35%;
-        }
-        p {
-            position: absolute;
-            margin-left: 17%;
-            margin-top: 4%;
+    }
+    .plat:hover {
+        box-shadow: 0.2rem 0.2rem 0.2rem #BDBDBD;
+        img {
+            width: 62%;
         }
     }
 }
