--- a/src/app/style/index.scss
+++ b/src/app/style/index.scss
@@ -2,3 +2,4 @@
 @import 'import/_mixins.scss';
 @import 'import/_variables.scss';
 @import 'components/base.scss';
+@import 'components/queries.scss';
