--- a/src/app/style/components/base.scss
+++ b/src/app/style/components/base.scss
@@ -14,66 +14,61 @@ body {
 
 
 /*mettre un id "header" à votre content principale*/
-header,{
-    #nav{
-        border:1px solid #bedb39;
-        border-width:1px 0;
-        list-style:none;
-        margin:0;
-        padding:0;
-        text-align:center;
+
+header,
+{
+    #nav {
+        border: 1px solid #bedb39;
+        border-width: 1px 0;
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        text-align: center;
         float: right;
     }
-    #nav,{
-      li{
-         display:inline;
-         a{
-             display:inline-block;
-             padding:25px;
-             color: orange;
-         }
-
-      }
+    #nav,
+    {
+        li {
+            display: inline;
+            a {
+                display: inline-block;
+                padding: 25px;
+                color: orange;
+            }
+        }
     }
-    #nav, a{
-        display:inline-block;
-        padding:25px;
+    #nav,
+    a {
+        display: inline-block;
+        padding: 25px;
         color: orange;
     }
-
-    #logo{
-      position: relative;
-      top: -6px;
-      left: -5px;
-
+    #logo {
+        position: relative;
+        top: -6px;
+        left: -5px;
     }
-
-    #menu{
-      padding: 20px;
+    #menu {
+        padding: 20px;
     }
 }
 
 
 /*----------------SLIDE--------------------*/
 
-#slide{
-	margin: 20px auto;
-	overflow:hidden;
-	width:70%;
-
-    ul{
-
-    	display:flex;
-    	list-style: none;
-    	transition: all 0.3s ease-in-out;
+#slide {
+    margin: 20px auto;
+    overflow: hidden;
+    width: 70%;
+    ul {
+        display: flex;
+        list-style: none;
+        transition: all 0.3s ease-in-out;
     }
-
     ul li img {
-    	width:200%;
-
+        width: 200%;
     }
 }
-
 
 
 /*mettre un id "slide" à votre content principale*/
@@ -98,7 +93,8 @@ header,{
         display: inline-block;
         margin: 0.5rem;
         padding: 0.5rem;
-        width: 30%;
+        width: 20rem;
+        height: 20rem;
         img {
             @include border-radius(0.5rem);
             transition-duration: 0.2s;
@@ -108,6 +104,10 @@ header,{
         h3 {
             font-size: 1.5rem;
             color: $brown;
+        }
+        p {
+            position: absolute;
+            width: 20rem;
         }
     }
     .plat:hover {
