--- a/src/app/style/components/base.scss
+++ b/src/app/style/components/base.scss
@@ -56,21 +56,65 @@ header,{
 
 /*----------------SLIDE--------------------*/
 
-#slide{
-	margin: 20px auto;
-	overflow:hidden;
-	width:70%;
+#slider{
+width: 70%;
+max-width: 1000px;
+height: 500px;
+overflow: hidden;
+margin: 130px auto;
+border: 3px solid #DCDCDC;
 
-    ul{
 
-    	display:flex;
-    	list-style: none;
-    	transition: all 0.3s ease-in-out;
+
+
+figure{
+    position: relative;
+    width: 500%;
+    margin: 0;
+    padding: 0;
+    font-size: 0;
+    text-align: left;
+    animation: 15s slidy infinite;
+
+    img{
+        width: 20%;
+        height: auto;
+        float: left;
+         &:nth-child(4){
+            height: 500px;
+        }
     }
+}
 
-    ul li img {
-    	width:200%;
+}
 
+@keyframes slidy {
+    0%{
+        left: 0%;
+    }
+    20%{
+        left: 0%;
+    }
+    25%{
+        left: -100%;
+    }
+    45%{
+        left:-100%;
+    }
+    50%{
+        left: -200%;
+    }
+    70%{
+        left:-200%;
+    }
+    75%{
+        left: -300%;
+    }
+    95%{
+        left:-300%;
+    }
+    100%{
+        left: -400%;
     }
 }
 
