--- a/src/app/style/components/base.scss
+++ b/src/app/style/components/base.scss
@@ -9,6 +9,10 @@ body {
     background: $greyLight;
 }
 
+strong {
+    font-weight: bold;
+}
+
 
 /*----------------HEADER-------------------*/
 
@@ -17,16 +21,15 @@ body {
 
 header {
     #nav {
-            border: 1px solid #bedb39;
-            border-width: 1px 0;
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-            float: right;
-        }
-    #nav
-    {
+        border: 1px solid #bedb39;
+        border-width: 1px 0;
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        text-align: center;
+        float: right;
+    }
+    #nav {
         li {
             display: inline;
             a {
@@ -52,17 +55,17 @@ header {
     }
 }
 
+
 /*----------------SLIDE--------------------*/
 
-#slider{
+#slider {
     width: 70%;
     max-width: 1000px;
     height: 500px;
     overflow: hidden;
     margin: 130px auto;
     border: 3px solid #DCDCDC;
-
-    figure{
+    figure {
         position: relative;
         width: 500%;
         margin: 0;
@@ -70,47 +73,47 @@ header {
         font-size: 0;
         text-align: left;
         animation: 15s slidy infinite;
-
-        img{
+        img {
             width: 20%;
             height: auto;
             float: left;
-             &:nth-child(4){
+            &:nth-child(4) {
                 height: 500px;
             }
         }
     }
-
     @keyframes slidy {
-        0%{
+        0% {
             left: 0%;
         }
-        20%{
+        20% {
             left: 0%;
         }
-        25%{
+        25% {
             left: -100%;
         }
-        45%{
-            left:-100%;
+        45% {
+            left: -100%;
         }
-        50%{
+        50% {
             left: -200%;
         }
-        70%{
-            left:-200%;
+        70% {
+            left: -200%;
         }
-        75%{
+        75% {
             left: -300%;
         }
-        95%{
-            left:-300%;
+        95% {
+            left: -300%;
         }
-        100%{
+        100% {
             left: -400%;
         }
     }
 }
+
+
 /*----------------CONTENT------------------*/
 
 #content {
@@ -131,7 +134,10 @@ header {
         margin: 0.5rem;
         padding: 0.5rem;
         width: 20rem;
-        height: 20rem;
+        height: 22rem;
+        div {
+            margin-top: 0.5rem;
+        }
         img {
             @include border-radius(0.5rem);
             transition-duration: 0.2s;
@@ -146,6 +152,21 @@ header {
         p {
             position: absolute;
             width: 20rem;
+        }
+        .buttons {
+            margin-top: 5.6rem;
+            text-align: center;
+            button {
+                margin: 0.2rem;
+                border: none;
+                font-size: 1rem;
+                width: 1.5rem;
+                height: 1.5rem;
+            }
+            button:hover {
+                cursor: pointer;
+                background: #bedb39;
+            }
         }
     }
     .plat:hover {
